--- a/arp_fledermaus/build.gradle
+++ b/arp_fledermaus/build.gradle
@@ -51,6 +51,6 @@ task transferFledermausPub(type: Db2Db, dependsOn: 'importCsv') {
     sourceDb = [dbUriEdit, dbUserEdit, dbPwdEdit]
     targetDb = [dbUriPub, dbUserPub, dbPwdPub]
     transferSets = [
-            new TransferSet('arp_fledermaus_pub.sql', 'arp_fledermaus_v1_pub.fledermausfundrte_fledermausfundort', true)
+            new TransferSet('arp_fledermaus_pub.sql', 'arp_fledermaus_pub_v1.fledermausfundrte_fledermausfundort', true)
     ];
 }
