--- a/agi_hoheitsgrenzen_pub/build.gradle
+++ b/agi_hoheitsgrenzen_pub/build.gradle
@@ -3,71 +3,73 @@ import ch.so.agi.gretl.api.TransferSet
 
 apply plugin: 'ch.so.agi.gretl'
 
-description = "GRETL-Job für Datenumbau der Hoheitsgrenzen innerhalb der sogis-DB, in die pub-DB und in die edit-DB"
+description = "GRETL-Job für Datenumbau der Hoheitsgrenzen innerhalb der edit-DB, in die pub-DB und in die edit-DB, am Ende in die sogis-DB"
 
-defaultTasks 'transferAgiHoheitsgrenzenToEditDb'
 
-task transferAgiHoheitsgrenzen(type: Db2Db){
-    sourceDb = [dbUriSogis, dbUserSogis, dbPwdSogis]
+'transferAgiHoheitsgrenzenToSogisDb'
+
+
+task transferAgiHoheitsgrenzen(type: Db2Db) {
+    sourceDb = [dbUriEdit, dbUserEdit, dbPwdEdit]
     targetDb = sourceDb
     transferSets = [
-            new TransferSet('agi_hoheitsgrenzen_pub_sogis_hoheitsgrenzen_gemeindegrenze.sql',
+            new TransferSet('agi_hoheitsgrenzen_gemeindegrenze.sql',
                     'agi_hoheitsgrenzen_pub.hoheitsgrenzen_gemeindegrenze', true),
-            new TransferSet('agi_hoheitsgrenzen_pub_sogis_hoheitsgrenzen_gemeindename_a4.sql',
+            new TransferSet('agi_hoheitsgrenzen_edit_pub_gemeindename_a4.sql',
                     'agi_hoheitsgrenzen_pub.hoheitsgrenzen_gemeindename_a4', true),
-            new TransferSet('agi_hoheitsgrenzen_pub_sogis_hoheitsgrenzen_gemeindename_a3.sql',
+           new TransferSet('agi_hoheitsgrenzen_edit_pub_gemeindename_a3.sql',
                     'agi_hoheitsgrenzen_pub.hoheitsgrenzen_gemeindename_a3', true),
-            new TransferSet('agi_hoheitsgrenzen_pub_sogis_hoheitsgrenzen_bezirksname_a4.sql',
+            new TransferSet('agi_hoheitsgrenzen_edit_pub_bezirksname_a4.sql',
                     'agi_hoheitsgrenzen_pub.hoheitsgrenzen_bezirksname_a4', true),
-            new TransferSet('agi_hoheitsgrenzen_pub_sogis_hoheitsgrenzen_bezirksname_a3.sql',
+            new TransferSet('agi_hoheitsgrenzen_edit_pub_bezirksname_a3.sql',
                     'agi_hoheitsgrenzen_pub.hoheitsgrenzen_bezirksname_a3', true),
-            new TransferSet('agi_hoheitsgrenzen_pub_sogis_hoheitsgrenzen_kantonsname_a4.sql',
+            new TransferSet('agi_hoheitsgrenzen_edit_pub_kantonsname_a4.sql',
                     'agi_hoheitsgrenzen_pub.hoheitsgrenzen_kantonsname_a4', true),
-            new TransferSet('agi_hoheitsgrenzen_pub_sogis_hoheitsgrenzen_kantonsname_a3.sql',
+            new TransferSet('agi_hoheitsgrenzen_edit_pub_kantonsname_a3.sql',
                     'agi_hoheitsgrenzen_pub.hoheitsgrenzen_kantonsname_a3', true)
     ]
 }
 
 task createGeometriesAgiHoheitsgrenzen(type: SqlExecutor, dependsOn:'transferAgiHoheitsgrenzen') {
-    description = "Baut die Nutzungsplanungsdaten des Kanton Solothurn in das MGDM des Bundes um."
-    database = [dbUriSogis, dbUserSogis, dbPwdSogis]
+    /////////////////////////////////////////////////////////////////description = "Baut die Nutzungsplanungsdaten des Kanton Solothurn in das MGDM des Bundes um."  // stimmt dieser Kommentar?
+    database = [dbUriEdit, dbUserEdit, dbPwdEdit]
     sqlFiles = [
-            'agi_hoheitsgrenzen_pub_sogis_hoheitsgrenzen_bezirksgrenze.sql',
-            'agi_hoheitsgrenzen_pub_sogis_hoheitsgrenzen_kantonsgrenze.sql',
-            'agi_hoheitsgrenzen_pub_sogis_hoheitsgrenzen_gemeindegrenze_generalisiert.sql',
-            'agi_hoheitsgrenzen_pub_sogis_hoheitsgrenzen_bezirksgrenze_generalisiert.sql',
-            'agi_hoheitsgrenzen_pub_sogis_hoheitsgrenzen_kantonsgrenze_generalisiert.sql'
+            'agi_hoheitsgrenzen_edit_pub_bezirksgrenze.sql',
+            'agi_hoheitsgrenzen_edit_pub_kantonsgrenze.sql',
+            'agi_hoheitsgrenzen_edit_pub_gemeindegrenze_generalisiert.sql',
+            'agi_hoheitsgrenzen_edit_pub_bezirksgrenze_generalisiert.sql',
+            'agi_hoheitsgrenzen_edit_pub_kantonsgrenze_generalisiert.sql'
 
     ]
 }
 
-task transferAgiHoheitsgrenzenToPubDb(type: Db2Db, dependsOn:'createGeometriesAgiHoheitsgrenzen'){
-    sourceDb = [dbUriSogis, dbUserSogis, dbPwdSogis]
+task transferAgiHoheitsgrenzenToPubDb(type: Db2Db, dependsOn:'createGeometriesAgiHoheitsgrenzen') {
+    sourceDb = [dbUriEdit, dbUserEdit, dbPwdEdit]
     targetDb = [dbUriPub, dbUserPub, dbPwdPub]
     transferSets = [
-            new TransferSet('agi_hoheitsgrenzen_pub_pub_hoheitsgrenzen_bezirksgrenze.sql',
+            new TransferSet('agi_hoheitsgrenzen_edit_pub_bezirksgrenze.sql',
                     'agi_hoheitsgrenzen_pub.hoheitsgrenzen_bezirksgrenze', true),
-            new TransferSet('agi_hoheitsgrenzen_pub_pub_hoheitsgrenzen_bezirksgrenze_generalisiert.sql',
+            new TransferSet('agi_hoheitsgrenzen_edit_pub_bezirksgrenze_generalisiert.sql',
                     'agi_hoheitsgrenzen_pub.hoheitsgrenzen_bezirksgrenze_generalisiert', true),
-            new TransferSet('agi_hoheitsgrenzen_pub_pub_hoheitsgrenzen_bezirksname_a3.sql',
+            new TransferSet('agi_hoheitsgrenzen_edit_pub_bezirksname_a3.sql',
                     'agi_hoheitsgrenzen_pub.hoheitsgrenzen_bezirksname_a3', true),
-            new TransferSet('agi_hoheitsgrenzen_pub_pub_hoheitsgrenzen_bezirksname_a4.sql',
+            new TransferSet('agi_hoheitsgrenzen_edit_pub_bezirksname_a4.sql',
                     'agi_hoheitsgrenzen_pub.hoheitsgrenzen_bezirksname_a4', true),
-            new TransferSet('agi_hoheitsgrenzen_pub_pub_hoheitsgrenzen_gemeindegrenze.sql',
+            new TransferSet('agi_hoheitsgrenzen_edit_pub_to_pub_gemeindegrenze.sql',
                     'agi_hoheitsgrenzen_pub.hoheitsgrenzen_gemeindegrenze', true),
-            new TransferSet('agi_hoheitsgrenzen_pub_pub_hoheitsgrenzen_gemeindegrenze_generalisiert.sql',
+            new TransferSet('agi_hoheitsgrenzen_edit_pub_to_pub_gemeindegrenze_generalisiert.sql',
                     'agi_hoheitsgrenzen_pub.hoheitsgrenzen_gemeindegrenze_generalisiert', true),
-            new TransferSet('agi_hoheitsgrenzen_pub_pub_hoheitsgrenzen_gemeindename_a3.sql',
+            new TransferSet('agi_hoheitsgrenzen_edit_pub_to_pub_gemeindename_a3.sql',
                     'agi_hoheitsgrenzen_pub.hoheitsgrenzen_gemeindename_a3', true),
-            new TransferSet('agi_hoheitsgrenzen_pub_pub_hoheitsgrenzen_gemeindename_a4.sql',
+            new TransferSet('agi_hoheitsgrenzen_edit_pub_to_pub_gemeindename_a4.sql',
                     'agi_hoheitsgrenzen_pub.hoheitsgrenzen_gemeindename_a4', true),
-            new TransferSet('agi_hoheitsgrenzen_pub_pub_hoheitsgrenzen_kantonsgrenze.sql',
+            new TransferSet('agi_hoheitsgrenzen_edit_pub_to_pub_kantonsgrenze.sql',
                     'agi_hoheitsgrenzen_pub.hoheitsgrenzen_kantonsgrenze', true),
-            new TransferSet('agi_hoheitsgrenzen_pub_pub_hoheitsgrenzen_kantonsgrenze_generalisiert.sql',
+            new TransferSet('agi_hoheitsgrenzen_edit_pub_to_pub_kantonsgrenze_generalisiert.sql',
                     'agi_hoheitsgrenzen_pub.hoheitsgrenzen_kantonsgrenze_generalisiert', true),
-            new TransferSet('agi_hoheitsgrenzen_pub_pub_hoheitsgrenzen_kantonsname_a3.sql',
+            new TransferSet('agi_hoheitsgrenzen_edit_pub_to_pub_kantonsname_a3.sql',
                     'agi_hoheitsgrenzen_pub.hoheitsgrenzen_kantonsname_a3', true),
-            new TransferSet('agi_hoheitsgrenzen_pub_pub_hoheitsgrenzen_kantonsname_a4.sql',
+            new TransferSet('agi_hoheitsgrenzen_edit_pub_to_pub_kantonsname_a4.sql',
                     'agi_hoheitsgrenzen_pub.hoheitsgrenzen_kantonsname_a4', true)
     ]
 
@@ -80,38 +82,36 @@ task fixGeometries(type: SqlExecutor) {
 }
 
 task refreshSolr(type:Exec, dependsOn:'transferAgiHoheitsgrenzenToPubDb') {
-	commandLine 'curl', '-i', '--max-time', '5', solrIndexupdaterBaseUrl + '/queue?ds=ch.so.agi.gemeindegrenzen,ch.so.agi.bezirksgrenzen'
+    commandLine 'curl', '-i', '--max-time', '5', solrIndexupdaterBaseUrl + '/queue?ds=ch.so.agi.gemeindegrenzen,ch.so.agi.bezirksgrenzen'
 }
 
-task transferAgiHoheitsgrenzenToEditDb(type: Db2Db, dependsOn:'refreshSolr'){
+task transferAgiHoheitsgrenzenToSogisDb(type: Db2Db, dependsOn:'refreshSolr') {
     sourceDb = [dbUriPub, dbUserPub, dbPwdPub]
-    targetDb = [dbUriEdit, dbUserEdit, dbPwdEdit]
+    targetDb = [dbUriSogis, dbUserSogis, dbPwdSogis]
     transferSets = [
-            new TransferSet('agi_hoheitsgrenzen_pub_pub_hoheitsgrenzen_bezirksgrenze.sql',
+            new TransferSet('agi_hoheitsgrenzen_edit_pub_to_pub_bezirksgrenze.sql',
                     'agi_hoheitsgrenzen_pub.hoheitsgrenzen_bezirksgrenze', true),
-            new TransferSet('agi_hoheitsgrenzen_pub_pub_hoheitsgrenzen_bezirksgrenze_generalisiert.sql',
+            new TransferSet('agi_hoheitsgrenzen_edit_pub_to_pub_bezirksgrenze_generalisiert.sql',
                     'agi_hoheitsgrenzen_pub.hoheitsgrenzen_bezirksgrenze_generalisiert', true),
-            new TransferSet('agi_hoheitsgrenzen_pub_pub_hoheitsgrenzen_bezirksname_a3.sql',
+            new TransferSet('agi_hoheitsgrenzen_edit_pub_to_pub_bezirksname_a3.sql',
                     'agi_hoheitsgrenzen_pub.hoheitsgrenzen_bezirksname_a3', true),
-            new TransferSet('agi_hoheitsgrenzen_pub_pub_hoheitsgrenzen_bezirksname_a4.sql',
+            new TransferSet('agi_hoheitsgrenzen_edit_pub_to_pub_bezirksname_a4.sql',
                     'agi_hoheitsgrenzen_pub.hoheitsgrenzen_bezirksname_a4', true),
-            new TransferSet('agi_hoheitsgrenzen_pub_pub_hoheitsgrenzen_gemeindegrenze.sql',
+            new TransferSet('agi_hoheitsgrenzen_edit_pub_to_pub_gemeindegrenze.sql',
                     'agi_hoheitsgrenzen_pub.hoheitsgrenzen_gemeindegrenze', true),
-            new TransferSet('agi_hoheitsgrenzen_pub_pub_hoheitsgrenzen_gemeindegrenze_generalisiert.sql',
+            new TransferSet('agi_hoheitsgrenzen_edit_pub_to_pub_gemeindegrenze_generalisiert.sql',
                     'agi_hoheitsgrenzen_pub.hoheitsgrenzen_gemeindegrenze_generalisiert', true),
-            new TransferSet('agi_hoheitsgrenzen_pub_pub_hoheitsgrenzen_gemeindename_a3.sql',
+            new TransferSet('agi_hoheitsgrenzen_edit_pub_to_pub_gemeindename_a3.sql',
                     'agi_hoheitsgrenzen_pub.hoheitsgrenzen_gemeindename_a3', true),
-            new TransferSet('agi_hoheitsgrenzen_pub_pub_hoheitsgrenzen_gemeindename_a4.sql',
+            new TransferSet('agi_hoheitsgrenzen_edit_pub_to_pub_gemeindename_a4.sql',
                     'agi_hoheitsgrenzen_pub.hoheitsgrenzen_gemeindename_a4', true),
-            new TransferSet('agi_hoheitsgrenzen_pub_pub_hoheitsgrenzen_kantonsgrenze.sql',
+            new TransferSet('agi_hoheitsgrenzen_edit_pub_to_pub_kantonsgrenze.sql',
                     'agi_hoheitsgrenzen_pub.hoheitsgrenzen_kantonsgrenze', true),
-            new TransferSet('agi_hoheitsgrenzen_pub_pub_hoheitsgrenzen_kantonsgrenze_generalisiert.sql',
+            new TransferSet('agi_hoheitsgrenzen_edit_pub_to_pub_kantonsgrenze_generalisiert.sql',
                     'agi_hoheitsgrenzen_pub.hoheitsgrenzen_kantonsgrenze_generalisiert', true),
-            new TransferSet('agi_hoheitsgrenzen_pub_pub_hoheitsgrenzen_kantonsname_a3.sql',
+            new TransferSet('agi_hoheitsgrenzen_edit_pub_to_pub_kantonsname_a3.sql',
                     'agi_hoheitsgrenzen_pub.hoheitsgrenzen_kantonsname_a3', true),
-            new TransferSet('agi_hoheitsgrenzen_pub_pub_hoheitsgrenzen_kantonsname_a4.sql',
+            new TransferSet('agi_hoheitsgrenzen_edit_pub_to_pub_kantonsname_a4.sql',
                     'agi_hoheitsgrenzen_pub.hoheitsgrenzen_kantonsname_a4', true)
     ]
 }
-
-
