--- a/agi_hoheitsgrenzen_pub/build.gradle
+++ b/agi_hoheitsgrenzen_pub/build.gradle
@@ -38,8 +38,14 @@ task createGeometriesAgiHoheitsgrenzen(type: SqlExecutor, dependsOn:'transferAgi
             'agi_hoheitsgrenzen_edit_pub_gemeindegrenze_generalisiert.sql',
             'agi_hoheitsgrenzen_edit_pub_bezirksgrenze_generalisiert.sql',
             'agi_hoheitsgrenzen_edit_pub_kantonsgrenze_generalisiert.sql'
-
     ]
+    
+    finalizedBy 'fixGeometries'
+}
+
+task fixGeometries(type: SqlExecutor) {
+    database = [dbUriPub, dbUserPub, dbPwdPub]
+    sqlFiles = ['fix_geometries.sql']
 }
 
 task transferAgiHoheitsgrenzenToPubDb(type: Db2Db, dependsOn:'createGeometriesAgiHoheitsgrenzen') {
@@ -71,13 +77,6 @@ task transferAgiHoheitsgrenzenToPubDb(type: Db2Db, dependsOn:'createGeometriesAg
             new TransferSet('agi_hoheitsgrenzen_edit_pub_to_pub_kantonsname_a4.sql',
                     'agi_hoheitsgrenzen_pub.hoheitsgrenzen_kantonsname_a4', true)
     ]
-
-    finalizedBy 'fixGeometries'
-}
-
-task fixGeometries(type: SqlExecutor) {
-    database = [dbUriPub, dbUserPub, dbPwdPub]
-    sqlFiles = ['fix_geometries.sql']
 }
 
 task refreshSolr(type:Exec, dependsOn:'transferAgiHoheitsgrenzenToPubDb') {
@@ -85,6 +84,7 @@ task refreshSolr(type:Exec, dependsOn:'transferAgiHoheitsgrenzenToPubDb') {
 }
 
 task transferAgiHoheitsgrenzenToSogisDb(type: Db2Db, dependsOn:'refreshSolr') {
+    description = "Schreibt die Daten in die SOGIS-DB zurück"
     sourceDb = [dbUriPub, dbUserPub, dbPwdPub]
     targetDb = [dbUriSogis, dbUserSogis, dbPwdSogis]
     transferSets = [
