--- a/afu_gewaesserschutz_zonen_areale_pub/Jenkinsfile
+++ b/afu_gewaesserschutz_zonen_areale_pub/Jenkinsfile
@@ -36,7 +36,7 @@ pipeline {
                 unstash name: "gretljob"
                 container('gretl') {
                     dir(env.JOB_BASE_NAME) {
-                        sh "gretl importXTF_pub"
+                        sh "gretl transferGewaesserschutz_pub"
                     }
                 }
             }
