--- a/afu_gewaesserschutz_zonen_areale_pub/build.gradle
+++ b/afu_gewaesserschutz_zonen_areale_pub/build.gradle
@@ -3,7 +3,7 @@ import ch.so.agi.gretl.api.TransferSet
 
 apply plugin: 'ch.so.agi.gretl'
 
-defaultTasks 'validateData', 'importXTF_pub'
+defaultTasks 'validateData', 'deleteData_staging_pub'
 
 def FileName = "afu_gewaesserschutz_zonen_areale.xtf"
 def FileNamePub = "afu_gewaesserschutz_zonen_areale_pub.xtf"
@@ -24,16 +24,16 @@ task validateDataEdit(type: IliValidator, dependsOn: 'exportDataEdit') {
     failOnError = true
 }
 
-task transferGewaesserschutz(type: Db2Db, dependsOn: 'validateDataEdit') {
+task transferGewaesserschutz_staging(type: Db2Db, dependsOn: 'validateDataEdit') {
     sourceDb = [dbUriEdit, dbUserEdit, dbPwdEdit]
     targetDb = [dbUriPub, dbUserPub, dbPwdPub]
     transferSets = [
-            new TransferSet('gewaesserschutz_schutzzone.sql', 'afu_gewaesserschutz_staging_v1.gewaesserschutz_schutzzone', true),
-            new TransferSet('gewaesserschutz_schutzareal.sql', 'afu_gewaesserschutz_staging_v1.gewaesserschutz_schutzareal', true),
+            new TransferSet('gewaesserschutz_schutzzone_staging.sql', 'afu_gewaesserschutz_staging_v1.gewaesserschutz_schutzzone', true),
+            new TransferSet('gewaesserschutz_schutzareal_staging.sql', 'afu_gewaesserschutz_staging_v1.gewaesserschutz_schutzareal', true),
     ];
 }
 
-task exportData (type: Ili2pgExport, dependsOn: 'transferGewaesserschutz') {
+task exportData (type: Ili2pgExport, dependsOn: 'transferGewaesserschutz_staging') {
     description = "Exportiert die umgebauten Daten aus dem Schema afu_gewaesserschutz_staging in ein INTERLIS-Datei."
     database = [dbUriPub, dbUserPub, dbPwdPub]
     dbschema = 'afu_gewaesserschutz_staging_v1'
@@ -49,19 +49,18 @@ task validateData(type: IliValidator, dependsOn: 'exportData') {
     failOnError = true
 }
 
-task deleteData_staging_pub (type: SqlExecutor) {
+
+task transferGewaesserschutz_pub(type: Db2Db, dependsOn: 'validateData') {
+    sourceDb = [dbUriPub, dbUserPub, dbPwdPub]
+    targetDb = [dbUriPub, dbUserPub, dbPwdPub]
+    transferSets = [
+            new TransferSet('gewaesserschutz_schutzzone.sql', 'afu_gewaesserschutz_v1.gewaesserschutz_schutzzone', true),
+            new TransferSet('gewaesserschutz_schutzareal.sql', 'afu_gewaesserschutz_v1.gewaesserschutz_schutzareal', true),
+    ];
+}
+
+task deleteData_staging_pub (type: SqlExecutor, dependsOn: 'transferGewaesserschutz_pub') {
     description = "Löscht/leert die Daten aus dem Schema afu_gewaesserschutz_staging"
     database = [dbUriPub, dbUserPub, dbPwdPub]
     sqlFiles = ["delete_afu_gewaesserschutz_staging.sql"]
-}
-
-task importXTF_pub(type: Ili2pgImport) {
-    description = 'Import der umgebaute INTERLIS-Datei in das Schema afu_gewaesserschutz_pub.'
-    database = [dbUriPub, dbUserPub, dbPwdPub]
-    dbschema = 'afu_gewaesserschutz_pub_v1'
-    models = 'SO_AfU_Gewaesserschutz_Publikation_20220817'
-    dataFile = file(FileNamePub)
-    deleteData = true
-    disableValidation = true
-    finalizedBy deleteData_staging_pub
 }
