[agi_hoheitsgrenzen_pub] move agi_hoheitsgrenze from sogis-DB to edit-DB

--- a/agi_hoheitsgrenzen_pub/build.gradle
+++ b/agi_hoheitsgrenzen_pub/build.gradle
@@ -39,6 +39,13 @@ task createGeometriesAgiHoheitsgrenzen(type: SqlExecutor, dependsOn:'transferAgi
             'agi_hoheitsgrenzen_edit_pub_bezirksgrenze_generalisiert.sql',
             'agi_hoheitsgrenzen_edit_pub_kantonsgrenze_generalisiert.sql'
     ]
+    
+    finalizedBy 'fixGeometries'
+}
+
+task fixGeometries(type: SqlExecutor) {
+    database = [dbUriEdit, dbUserEdit, dbPwdEdit]
+    sqlFiles = ['fix_geometries.sql']
 }
 
 task transferAgiHoheitsgrenzenToPubDb(type: Db2Db, dependsOn:'createGeometriesAgiHoheitsgrenzen') {
@@ -70,13 +77,6 @@ task transferAgiHoheitsgrenzenToPubDb(type: Db2Db, dependsOn:'createGeometriesAg
             new TransferSet('agi_hoheitsgrenzen_edit_pub_to_pub_kantonsname_a4.sql',
                     'agi_hoheitsgrenzen_pub.hoheitsgrenzen_kantonsname_a4', true)
     ]
-    
-    finalizedBy 'fixGeometries'
-}
-
-task fixGeometries(type: SqlExecutor) {
-    database = [dbUriPub, dbUserPub, dbPwdPub]
-    sqlFiles = ['fix_geometries.sql']
 }
 
 task refreshSolr(type:Exec, dependsOn:'transferAgiHoheitsgrenzenToPubDb') {
