--- a/avt_oev_gueteklassen_import/Jenkinsfile
+++ b/avt_oev_gueteklassen_import/Jenkinsfile
@@ -23,7 +23,7 @@ pipeline {
         timeout(time: 1, unit: 'DAYS')
     }
     stages {
-        stage('Run GRETL-Job') {
+        stage('Run GRETL job') {
             steps {
                 git url: "${env.GIT_REPO_URL}", branch: "${params.BRANCH ?: 'main'}", changelog: false
                 container('gretl') {
