[agi_check_ili_export] Request 1 CPU

--- a/agi_check_ili_export/Jenkinsfile
+++ b/agi_check_ili_export/Jenkinsfile
@@ -10,6 +10,7 @@ pipeline {
                 resources:
                   requests:
                     memory: 6.5Gi
+                    cpu: "1"
                   limits:
                     memory: 6.5Gi
                     cpu: "2"
