--- a/arp_agglomerationsprogramme_pub/job.properties
+++ b/arp_agglomerationsprogramme_pub/job.properties
@@ -1,2 +1,1 @@
-authorization.permissions=gretl-users-barpa
-authorization.permissions=gretl-users-bvtaa
+authorization.permissions=gretl-users-barpa,gretl-users-bvtaa
