--- a/agi_hoheitsgrenzen_pub/build.gradle
+++ b/agi_hoheitsgrenzen_pub/build.gradle
@@ -3,7 +3,7 @@ import ch.so.agi.gretl.api.TransferSet
 
 apply plugin: 'ch.so.agi.gretl'
 
-description = "GRETL-Job für Datenumbau der Hoheitsgrenzen innerhalb der edit-DB, in die pub-DB und in die edit-DB, am Ende in die sogis-DB"
+description = "GRETL-Job für Datenumbau der Hoheitsgrenzen innerhalb der edit-DB, ins pub-Schema (pub-DB, edit-DB), am Ende ins pub-Schema der sogis-DB"
 
 
 defaultTasks 'transferAgiHoheitsgrenzenToSogisDb'
@@ -83,34 +83,4 @@ task refreshSolr(type:Exec, dependsOn:'transferAgiHoheitsgrenzenToPubDb') {
     commandLine 'curl', '-i', '--max-time', '5', solrIndexupdaterBaseUrl + '/queue?ds=ch.so.agi.gemeindegrenzen,ch.so.agi.bezirksgrenzen'
 }
 
-task transferAgiHoheitsgrenzenToSogisDb(type: Db2Db, dependsOn:'refreshSolr') {
-    description = "Schreibt die Daten in die SOGIS-DB zurück"
-    sourceDb = [dbUriPub, dbUserPub, dbPwdPub]
-    targetDb = [dbUriSogis, dbUserSogis, dbPwdSogis]
-    transferSets = [
-            new TransferSet('agi_hoheitsgrenzen_edit_pub_to_pub_bezirksgrenze.sql',
-                    'agi_hoheitsgrenzen_pub.hoheitsgrenzen_bezirksgrenze', true),
-            new TransferSet('agi_hoheitsgrenzen_edit_pub_to_pub_bezirksgrenze_generalisiert.sql',
-                    'agi_hoheitsgrenzen_pub.hoheitsgrenzen_bezirksgrenze_generalisiert', true),
-            new TransferSet('agi_hoheitsgrenzen_edit_pub_to_pub_bezirksname_a3.sql',
-                    'agi_hoheitsgrenzen_pub.hoheitsgrenzen_bezirksname_a3', true),
-            new TransferSet('agi_hoheitsgrenzen_edit_pub_to_pub_bezirksname_a4.sql',
-                    'agi_hoheitsgrenzen_pub.hoheitsgrenzen_bezirksname_a4', true),
-            new TransferSet('agi_hoheitsgrenzen_edit_pub_to_pub_gemeindegrenze.sql',
-                    'agi_hoheitsgrenzen_pub.hoheitsgrenzen_gemeindegrenze', true),
-            new TransferSet('agi_hoheitsgrenzen_edit_pub_to_pub_gemeindegrenze_generalisiert.sql',
-                    'agi_hoheitsgrenzen_pub.hoheitsgrenzen_gemeindegrenze_generalisiert', true),
-            new TransferSet('agi_hoheitsgrenzen_edit_pub_to_pub_gemeindename_a3.sql',
-                    'agi_hoheitsgrenzen_pub.hoheitsgrenzen_gemeindename_a3', true),
-            new TransferSet('agi_hoheitsgrenzen_edit_pub_to_pub_gemeindename_a4.sql',
-                    'agi_hoheitsgrenzen_pub.hoheitsgrenzen_gemeindename_a4', true),
-            new TransferSet('agi_hoheitsgrenzen_edit_pub_to_pub_kantonsgrenze.sql',
-                    'agi_hoheitsgrenzen_pub.hoheitsgrenzen_kantonsgrenze', true),
-            new TransferSet('agi_hoheitsgrenzen_edit_pub_to_pub_kantonsgrenze_generalisiert.sql',
-                    'agi_hoheitsgrenzen_pub.hoheitsgrenzen_kantonsgrenze_generalisiert', true),
-            new TransferSet('agi_hoheitsgrenzen_edit_pub_to_pub_kantonsname_a3.sql',
-                    'agi_hoheitsgrenzen_pub.hoheitsgrenzen_kantonsname_a3', true),
-            new TransferSet('agi_hoheitsgrenzen_edit_pub_to_pub_kantonsname_a4.sql',
-                    'agi_hoheitsgrenzen_pub.hoheitsgrenzen_kantonsname_a4', true)
-    ]
-}
+
