[agi_hoheitsgrenzen_pub] move agi_hoheitsgrenze from sogis-DB to edit-DB Test ohne sogis-DB

--- a/agi_hoheitsgrenzen_pub/build.gradle
+++ b/agi_hoheitsgrenzen_pub/build.gradle
@@ -6,7 +6,7 @@ apply plugin: 'ch.so.agi.gretl'
 description = "GRETL-Job für Datenumbau der Hoheitsgrenzen innerhalb der edit-DB, ins pub-Schema (pub-DB, edit-DB), am Ende ins pub-Schema der sogis-DB"
 
 
-defaultTasks 'transferAgiHoheitsgrenzenToSogisDb'
+defaultTasks 'refreshSolr'
 
 
 task transferAgiHoheitsgrenzen(type: Db2Db) {
