--- a/afu_onlinerisk_transfer/build.gradle
+++ b/afu_onlinerisk_transfer/build.gradle
@@ -21,6 +21,7 @@ task transfer_onlinerisk(type: Db2Db,dependsOn: "clean_onlinerisk_before_import"
     transferSets = [
             new TransferSet('betrieb.sql', 'afu_qrcat_v1.onlinerisk_betrieb', true),
             new TransferSet('untersuchungseinheit.sql', 'afu_qrcat_v1.onlinerisk_untersuchungseinheit', true, (String[])["geometrie:wkt:2056"]),
-            new TransferSet('gebaeude.sql', 'afu_qrcat_v1.onlinerisk_gebaeude', true, (String[])["geometrie:wkt:2056"])
+            new TransferSet('gebaeude.sql', 'afu_qrcat_v1.onlinerisk_gebaeude', true, (String[])["geometrie:wkt:2056"]),
+            new TransferSet('bereich.sql', 'afu_qrcat_v1.onlinerisk_bereich', true)
     ];
 }
