--- a/afu_qrcat_migration/build.gradle
+++ b/afu_qrcat_migration/build.gradle
@@ -9,7 +9,7 @@ def DB_Schema_QRcat = "afu_qrcat_v1"
 
 task "clean_qrcat_before_import"(type: SqlExecutor) {
     description = "QRcat Daten in der richtigen Reihenfolge (dependencies) löschen vor dem Neuimport"
-    database = [dbUriEdit, dbUserEdit, dbPwdEdit]
+    database = [dbUriSogis, dbUserSogis, dbPwdSogis]
     sqlParameters = [DB_Schema_QRcat:DB_Schema_QRcat]
     sqlFiles = ['delete_qrcat.sql']
 }
